--- a/03_features_collections.ipynb
+++ b/03_features_collections.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -870,7 +870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save processed data for ML model"
+    "## Rename columns to avoid confusions"
    ]
   },
   {
@@ -896,7 +896,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_localness_filter.loc[df_localness_filter.rating == 'Amazing', 'rating'] = '1.Amazing'\n",
+    "df_localness_filter.loc[df_localness_filter.rating == 'Very good', 'rating'] = '2.Very good'\n",
+    "df_localness_filter.loc[df_localness_filter.rating == 'Good', 'rating'] = '3.Good'\n",
+    "df_localness_filter.loc[df_localness_filter.rating == 'OK', 'rating'] = '4.OK'\n",
+    "df_localness_filter.loc[df_localness_filter.rating == 'None', 'rating'] = '5.None'\n",
+    "\n",
+    "df_localness_filter.loc[df_localness_filter.n_rating == 'Amazing', 'n_rating'] = '1.Amazing'\n",
+    "df_localness_filter.loc[df_localness_filter.n_rating == 'Very good', 'n_rating'] = '2.Very good'\n",
+    "df_localness_filter.loc[df_localness_filter.n_rating == 'Good', 'n_rating'] = '3.Good'\n",
+    "df_localness_filter.loc[df_localness_filter.n_rating == 'OK', 'n_rating'] = '4.OK'\n",
+    "df_localness_filter.loc[df_localness_filter.n_rating == 'None', 'n_rating'] = '5.None'\n",
+    "\n",
+    "df_localness_filter.loc[df_localness_filter.isweekend == True, 'isweekend'] = 'Yes'\n",
+    "df_localness_filter.loc[df_localness_filter.isweekend == False, 'isweekend'] = 'No'\n",
+    "\n",
+    "df_localness_filter.loc[df_localness_filter.incentive_delivery == True, 'incentive_delivery'] = 'Yes'\n",
+    "df_localness_filter.loc[df_localness_filter.incentive_delivery == False, 'incentive_delivery'] = 'No'\n",
+    "\n",
+    "df_localness_filter.loc[df_localness_filter.incentive_menu_discount == True, 'incentive_menu_discount'] = 'Yes'\n",
+    "df_localness_filter.loc[df_localness_filter.incentive_menu_discount == False, 'incentive_menu_discount'] = 'No'\n",
+    "\n",
+    "df_localness_filter.loc[df_localness_filter.incentive_voucher_wallet == True, 'incentive_voucher_wallet'] = 'Yes'\n",
+    "df_localness_filter.loc[df_localness_filter.incentive_voucher_wallet == False, 'incentive_voucher_wallet'] = 'No'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_localness_filter = df_localness_filter.rename(columns={\"item_price\": \"price_per_item\", \"approxi_rent\":\"estimated_rent\",\n",
+    "  \"poi_count_0.5km\" : \"restaurant_count_0.5km\", \"poi_count_0.5_1km\": \"restaurant_count_0.5_1km\",\n",
+    "  \"poi_count_1_2km\": \"restaurant_count_1_2km\", \"poi_count_2_3km\" : \"restaurant_count_2_3km\", \n",
+    "  \"poi_count_3_4km\" : \"restaurant_count_3_4km\", \"poi_count_4_5km\" : \"restaurant_count_4_5km\"\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Correct localness value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -955,10 +1006,10 @@
        "      <th>pandana_localness</th>\n",
        "      <th>speed</th>\n",
        "      <th>isweekend</th>\n",
-       "      <th>item_price</th>\n",
+       "      <th>price_per_item</th>\n",
        "      <th>customer_loc_id</th>\n",
        "      <th>entropy_0.5km</th>\n",
-       "      <th>poi_count_0.5km</th>\n",
+       "      <th>restaurant_count_0.5km</th>\n",
        "      <th>entropy_1km</th>\n",
        "      <th>poi_count_1km</th>\n",
        "      <th>entropy_2km</th>\n",
@@ -969,12 +1020,12 @@
        "      <th>poi_count_4km</th>\n",
        "      <th>entropy_5km</th>\n",
        "      <th>poi_count_5km</th>\n",
-       "      <th>poi_count_0.5_1km</th>\n",
-       "      <th>poi_count_1_2km</th>\n",
-       "      <th>poi_count_2_3km</th>\n",
-       "      <th>poi_count_3_4km</th>\n",
-       "      <th>poi_count_4_5km</th>\n",
-       "      <th>approxi_rent</th>\n",
+       "      <th>restaurant_count_0.5_1km</th>\n",
+       "      <th>restaurant_count_1_2km</th>\n",
+       "      <th>restaurant_count_2_3km</th>\n",
+       "      <th>restaurant_count_3_4km</th>\n",
+       "      <th>restaurant_count_4_5km</th>\n",
+       "      <th>estimated_rent</th>\n",
        "      <th>compensation</th>\n",
        "      <th>discounted delivery</th>\n",
        "      <th>free delivery</th>\n",
@@ -1029,7 +1080,7 @@
        "      <td>4.61410</td>\n",
        "      <td>0.14160</td>\n",
        "      <td>10.25355</td>\n",
-       "      <td>False</td>\n",
+       "      <td>No</td>\n",
        "      <td>30.06471</td>\n",
        "      <td>55.21387725.155851</td>\n",
        "      <td>0.00000</td>\n",
@@ -1058,11 +1109,11 @@
        "      <td>0.00000</td>\n",
        "      <td>10.00000</td>\n",
        "      <td>voucher wallet</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Amazing</td>\n",
-       "      <td>None</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1.Amazing</td>\n",
+       "      <td>5.None</td>\n",
        "      <td>58</td>\n",
        "      <td>0.85783</td>\n",
        "    </tr>\n",
@@ -1102,7 +1153,7 @@
        "      <td>4.61410</td>\n",
        "      <td>0.14160</td>\n",
        "      <td>8.93051</td>\n",
-       "      <td>False</td>\n",
+       "      <td>No</td>\n",
        "      <td>30.06471</td>\n",
        "      <td>55.213885121047525.1557155663109</td>\n",
        "      <td>0.00000</td>\n",
@@ -1131,11 +1182,11 @@
        "      <td>0.00000</td>\n",
        "      <td>10.00000</td>\n",
        "      <td>voucher wallet</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>Amazing</td>\n",
-       "      <td>None</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>1.Amazing</td>\n",
+       "      <td>5.None</td>\n",
        "      <td>58</td>\n",
        "      <td>0.85783</td>\n",
        "    </tr>\n",
@@ -1144,16 +1195,16 @@
        "</div>"
       ],
       "text/plain": [
-       "   account_id    order_id order_date           order_time  vendor_id         vendor_name main_cuisine vertical  delivery_fee_amount_lc  service_fee_amount_lc  basket_amount_lc is_incentive_applied  incentive_amount_lc       pickup_id  customer_lon  customer_lat  vendor_lon  vendor_lat  order_time_hour  delivery_duration  total_duration     node_id  nearest_dist1  poi1 n_vertical  n_vendor_id n_main_cuisine         n_vendor_name  n_vendor_lon  n_vendor_lat  vendor_index  pandana_distance_realdist  pandana_localness    speed  isweekend  item_price                   customer_loc_id  entropy_0.5km  poi_count_0.5km  entropy_1km  poi_count_1km  entropy_2km  poi_count_2km  entropy_3km  poi_count_3km  entropy_4km  poi_count_4km  entropy_5km  poi_count_5km  poi_count_0.5_1km  poi_count_1_2km  poi_count_2_3km  poi_count_3_4km  poi_count_4_5km  approxi_rent  compensation  discounted delivery  free delivery     gem  item discount  menu discount  voucher wallet incentives_type incentive_delivery  \\\n",
-       "0  7051337     1305576462 2023-10-10  2023-10-10 15:30:22  50868      SHAGHF, Jumeirah 3  coffee       food    0.00000                 1.73000                57.75000           True                10.00000             249162013.00000 55.21388      25.15585      55.23119    25.18903     15               17                 27              7584090309 0.65335         840   food       697762       coffee         Awaken Cafe, Al Wasl 55.21303      25.15146       840          4.61410                    0.14160            10.25355  False     30.06471     55.21387725.155851               0.00000        0.00000          0.47137      21.00000       0.65855      105.00000      0.66518      198.00000      0.69070      296.00000      0.70457      582.00000      21.00000           84.00000         93.00000         98.00000         286.00000        90.44289      0.00000       0.00000              0.00000        0.00000 0.00000        0.00000        10.00000         voucher wallet  False               \n",
-       "1  7051337     1313167366 2023-10-16  2023-10-16 16:43:34  50868      SHAGHF, Jumeirah 3  coffee       food    7.50000                 0.90000                26.25000           True                10.00000             250948408.00000 55.21389      25.15572      55.23119    25.18903     16               13                 31              7584090309 0.65335         840   food       697762       coffee         Awaken Cafe, Al Wasl 55.21303      25.15146       840          4.61410                    0.14160            8.93051   False     30.06471     55.213885121047525.1557155663109 0.00000        0.00000          0.47137      21.00000       0.65855      105.00000      0.66603      197.00000      0.69169      295.00000      0.70585      587.00000      21.00000           84.00000         92.00000         98.00000         292.00000        90.65273      0.00000       0.00000              0.00000        0.00000 0.00000        0.00000        10.00000         voucher wallet  False               \n",
+       "   account_id    order_id  order_date           order_time  vendor_id         vendor_name main_cuisine vertical  delivery_fee_amount_lc  service_fee_amount_lc  basket_amount_lc is_incentive_applied  incentive_amount_lc       pickup_id  customer_lon  customer_lat  vendor_lon  vendor_lat  order_time_hour  delivery_duration  total_duration     node_id  nearest_dist1  poi1 n_vertical  n_vendor_id n_main_cuisine         n_vendor_name  n_vendor_lon  n_vendor_lat  vendor_index  pandana_distance_realdist  pandana_localness    speed isweekend  price_per_item                   customer_loc_id  entropy_0.5km  restaurant_count_0.5km  entropy_1km  poi_count_1km  entropy_2km  poi_count_2km  entropy_3km  poi_count_3km  entropy_4km  poi_count_4km  entropy_5km  poi_count_5km  restaurant_count_0.5_1km  restaurant_count_1_2km  restaurant_count_2_3km  restaurant_count_3_4km  restaurant_count_4_5km  estimated_rent  compensation  discounted delivery  free delivery     gem  item discount  menu discount  \\\n",
+       "0  7051337     1305576462  2023-10-10  2023-10-10 15:30:22  50868      SHAGHF, Jumeirah 3  coffee       food    0.00000                 1.73000                57.75000           True                10.00000             249162013.00000 55.21388      25.15585      55.23119    25.18903     15               17                 27              7584090309 0.65335         840   food       697762       coffee         Awaken Cafe, Al Wasl 55.21303      25.15146       840          4.61410                    0.14160            10.25355  No       30.06471         55.21387725.155851               0.00000        0.00000                 0.47137      21.00000       0.65855      105.00000      0.66518      198.00000      0.69070      296.00000      0.70457      582.00000      21.00000                  84.00000                93.00000                98.00000                286.00000               90.44289        0.00000       0.00000              0.00000        0.00000 0.00000        0.00000          \n",
+       "1  7051337     1313167366  2023-10-16  2023-10-16 16:43:34  50868      SHAGHF, Jumeirah 3  coffee       food    7.50000                 0.90000                26.25000           True                10.00000             250948408.00000 55.21389      25.15572      55.23119    25.18903     16               13                 31              7584090309 0.65335         840   food       697762       coffee         Awaken Cafe, Al Wasl 55.21303      25.15146       840          4.61410                    0.14160            8.93051   No       30.06471         55.213885121047525.1557155663109 0.00000        0.00000                 0.47137      21.00000       0.65855      105.00000      0.66603      197.00000      0.69169      295.00000      0.70585      587.00000      21.00000                  84.00000                92.00000                98.00000                292.00000               90.65273        0.00000       0.00000              0.00000        0.00000 0.00000        0.00000          \n",
        "\n",
-       "  incentive_menu_discount incentive_voucher_wallet   rating n_rating  total_orders  consistency  \n",
-       "0  False                   True                     Amazing  None     58           0.85783       \n",
-       "1  False                   True                     Amazing  None     58           0.85783       "
+       "   voucher wallet incentives_type incentive_delivery incentive_menu_discount incentive_voucher_wallet     rating n_rating  total_orders  consistency  \n",
+       "0 10.00000         voucher wallet  No                 No                      Yes                      1.Amazing  5.None   58           0.85783       \n",
+       "1 10.00000         voucher wallet  No                 No                      Yes                      1.Amazing  5.None   58           0.85783       "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,15 +1215,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_localness_filter['nearest_dist1'] = df_localness_filter['nearest_dist1']+0.001 # plus one meter to correct zero localness when both pandana_distance_realdist and nearest_dist1 are zero\n",
+    "df_localness_filter['pandana_distance_realdist'] = df_localness_filter['pandana_distance_realdist']+0.001\n",
+    "df_localness_filter['pandana_localness'] = df_localness_filter['nearest_dist1']/df_localness_filter['pandana_distance_realdist']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save processed data for ML model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 37s, sys: 2.09 s, total: 2min 39s\n",
-      "Wall time: 4min 7s\n"
+      "CPU times: user 1min 21s, sys: 1.49 s, total: 1min 23s\n",
+      "Wall time: 1min 24s\n"
      ]
     }
    ],
@@ -1209,6 +1285,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2767286\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import pandas as pd\n",
+    "\n",
+    "# df_localness_filter = pd.read_csv('./data/food_localness_final_oct.csv')\n",
+    "# print(df_localness_filter.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1223,48 +1319,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['None', 'Very good', 'Amazing', 'Good', 'OK']"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_localness_filter.n_rating.unique().tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Very good    1490883\n",
-       "None         574897 \n",
-       "Amazing      563732 \n",
-       "Good         130681 \n",
-       "OK           7093   \n",
-       "Name: n_rating, dtype: int64"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_localness_filter.n_rating.value_counts()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
