update shap plots

--- a/04_explore_localness.ipynb
+++ b/04_explore_localness.ipynb
@@ -425,22 +425,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.061504665582090175"
+       "Index(['account_id', 'order_id', 'order_date', 'order_time', 'vendor_id', 'vendor_name', 'main_cuisine', 'vertical', 'delivery_fee_amount_lc', 'service_fee_amount_lc', 'basket_amount_lc', 'is_incentive_applied', 'incentive_amount_lc', 'pickup_id', 'customer_lon', 'customer_lat', 'vendor_lon', 'vendor_lat', 'order_time_hour', 'delivery_duration', 'total_duration', 'node_id', 'nearest_dist1', 'poi1', 'n_vertical', 'n_vendor_id', 'n_main_cuisine', 'n_vendor_name', 'n_vendor_lon', 'n_vendor_lat', 'vendor_index', 'pandana_distance_realdist', 'pandana_localness', 'speed', 'customer_loc_id', 'isweekend', 'price_per_item', 'entropy_05km', 'restaurant_count_05km', 'entropy_1km', 'poi_count_1km', 'entropy_2km', 'poi_count_2km', 'entropy_3km', 'poi_count_3km', 'entropy_4km', 'poi_count_4km', 'entropy_5km', 'poi_count_5km', 'restaurant_count_05_1km', 'restaurant_count_1_2km', 'restaurant_count_2_3km', 'restaurant_count_3_4km', 'restaurant_count_4_5km', 'estimated_rent', 'compensation',\n",
+       "       'discounted delivery', 'free delivery', 'gem', 'item discount', 'menu discount', 'voucher wallet', 'incentives_type', 'incentive_delivery', 'incentive_menu_discount', 'incentive_voucher_wallet', 'rating', 'n_rating', 'consistency', 'total_orders', 'log_pandana_localness'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 170201/2767286.00000"
+    "df_localness.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06124627689716097"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df_localness.pandana_distance_realdist.describe()\n",
+    "# df_localness.total_duration.describe()\n",
+    "# df_localness.delivery_fee_amount_lc.describe()\n",
+    "# df_localness.delivery_duration.describe()\n",
+    "# df_localness.basket_amount_lc.describe()\n",
+    "# df_localness.incentive_delivery.value_counts()\n",
+    "170446/2782961.0"
    ]
   },
   {
