--- a/01_localness_pandana.ipynb
+++ b/01_localness_pandana.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,15 @@
     "pd.options.display.float_format = '{:.5f}'.format\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %pip show pandana"
    ]
   },
   {
@@ -62,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -70,8 +79,8 @@
      "output_type": "stream",
      "text": [
       "2919915\n",
-      "CPU times: user 8.67 s, sys: 0 ns, total: 8.67 s\n",
-      "Wall time: 9.7 s\n"
+      "CPU times: user 5.2 s, sys: 1.6 s, total: 6.8 s\n",
+      "Wall time: 7.92 s\n"
      ]
     }
    ],
@@ -491,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -499,8 +508,8 @@
      "output_type": "stream",
      "text": [
       "110123\n",
-      "CPU times: user 185 ms, sys: 0 ns, total: 185 ms\n",
-      "Wall time: 419 ms\n"
+      "CPU times: user 50.8 s, sys: 1.5 s, total: 52.3 s\n",
+      "Wall time: 3.25 s\n"
      ]
     }
    ],
@@ -509,7 +518,9 @@
     "# load existing network data\n",
     "nodes = pd.read_csv('./output/nodes.csv', index_col=0)\n",
     "print(nodes.shape[0])\n",
-    "edges = pd.read_csv('./output/edges.csv', index_col=[0,1])"
+    "edges = pd.read_csv('./output/edges.csv', index_col=[0,1])\n",
+    "network = pandana.Network(nodes['x'], nodes['y'], \n",
+    "                          edges['from'], edges['to'], edges[['distance']])"
    ]
   },
   {
@@ -521,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -530,8 +541,8 @@
      "text": [
       "2919915\n",
       "41921\n",
-      "CPU times: user 3.37 s, sys: 0 ns, total: 3.37 s\n",
-      "Wall time: 3.37 s\n"
+      "CPU times: user 3.14 s, sys: 20.4 ms, total: 3.16 s\n",
+      "Wall time: 3.16 s\n"
      ]
     }
    ],
