update for paper revision

--- a/00_datapreprocess.ipynb
+++ b/00_datapreprocess.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/rongxiang/.local/lib/python3.8/site-packages/pandas/core/computation/expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.1' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -46,17 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total food orders: 2920065\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_order = df_order[~df_order.vendor_id.isin([677914,690257])] # these vendor's location is problematic so exclude it \n",
     "df_order =  df_order[df_order.vertical=='food'] # select food order only; Grocery orders are not so reliable because Talabat mostly only deliver groceries from their own warehouses\n",
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +281,7 @@
        "4  food     709554     pizza        Pasta La Pizza, Bluewaters Island          55.12460    25.07763   "
       ]
      },
-     "execution_count": 77,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,50 +439,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for item in food_categories:\n",
-    "    df_vendor.loc[df_vendor.main_cuisine == item, 'main_cuisine'] = food_categories[item]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "for item in food_categories:\n",
-    "    df_order.loc[df_order.main_cuisine == item, 'main_cuisine'] = food_categories[item]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_vendor = df_vendor[~df_vendor['main_cuisine'].isna()]\n",
-    "df_order = df_order[~df_order['main_cuisine'].isna()]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "unique types of cuisine: 66\n",
-      "unique types of cuisine: 66\n"
+      "CPU times: user 6 µs, sys: 4 µs, total: 10 µs\n",
+      "Wall time: 18.6 µs\n"
      ]
     }
    ],
    "source": [
+    "%time\n",
+    "df_vendor['main_cuisine'] = df_vendor['main_cuisine'].replace(food_categories)\n",
+    "df_order['main_cuisine'] = df_order['main_cuisine'].replace(food_categories)\n",
+    "df_vendor = df_vendor[~df_vendor['main_cuisine'].isna()]\n",
+    "df_order = df_order[~df_order['main_cuisine'].isna()]\n",
     "print('unique types of cuisine:',df_vendor.main_cuisine.unique().shape[0])\n",
     "print('unique types of cuisine:',df_order.main_cuisine.unique().shape[0])"
    ]
@@ -506,23 +481,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2919915"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_order.shape[0]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -578,5 +540,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
