--- a/eval_localness_Only_well_ratings.ipynb
+++ b/eval_localness_Only_well_ratings.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This notebook is to test if exlcuding bad rating restaurants, how that would impact localness index"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
