--- a/eval_localness_sensitivity_analysis.ipynb
+++ b/eval_localness_sensitivity_analysis.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This notebook is for sensetivity analysis of localness index when using different categorization of cuisines"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
